<?xml version="1.0"?>
<package format="3">
  <name>direct_visual_lidar_calibration</name>
  <version>0.0.0</version>
  <description>LiDAR-Camera calibration based on NID-based direct image-pointcloud registration</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>

  <depend>fmt</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
